--- a/v-on.html
+++ b/v-on.html
@@ -17,7 +17,7 @@
                 },
                 methods : {
                     fnMesseagereverse : function(){
-                        this.message = this.message.split('').reverse().join('')
+                        this.message = this.message.split('').reverse().join('');
                     }
                 }
             }) 
